# pfe

./: .gitignore  CMakeLists.txt  Makefile  README.md  qmake.pro
benchmark/: CMakeLists.txt  benchmark.pro  benchmark_asa_slic.cpp  gnuplot_i.hpp  script.sh  script2.sh
docs/: semantic-kitti-api.md
docs/soft/: README.md
docs/soft/fast_hierarchy/: clickablelabel.cpp  fast_hierarchy.pro  mainwindow.cpp  mainwindow.h  superpixelhierarchy.cpp  superpixelhierarchymex.hpp
docs/soft/slic_hierarchy/: clickablelabel.h  mainwindow.cpp  slic.cpp  slic_hierarchy.pro
include/: clickablelabel.h  mainwindow.h  pointcloud.h  rangeimage.h  shdist.h  slic.h  superpixelhierarchy.h  superpixelhierarchymex.hpp
organiz/meeting_reports/client/: 03-02-2021.md  10-02-2021.md  25-01-2021.md
organiz/meeting_reports/teacher/: 02-01-2021.md  09-02-2021.md
src/: app.pro  clickablelabel.cpp  fast_hierarchy.pro  mainwindow.cpp  mainwindow.ui  pointcloud.cpp  rangeimage.cpp  shdist.cpp  slic.cpp  src.pro  superpixelhierarchy.cpp  ui_mainwindow.h
src/fast_hierarchy/: clickablelabel.cpp  clickablelabel.h  fast_hierarchy.pro  mainwindow.cpp  mainwindow.ui  pointcloud.h  rangeimage.cpp  rangeimage.h  superpixelhierarchy.cpp  superpixelhierarchy.h  superpixelhierarchymex.hpp
src/slic_hierarchy/: 08_000242.npy  clickablelabel.cpp  cloudpoints.cpp  cloudpoints.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointcloud.cpp  rangeimage.cpp  rangeimage.h  slic.h  slic_hierarchy.pro  t.npy
src/tests/: gtest.pro  test_pointcloud.cpp  test_rangeimage.cpp
tests/: gtest.pro  test_pointcloud.cpp  test_projection.cpp  test_rangeimage.cpp
